# T4G

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .vercelignore  API_INTEGRATION_COMPLETE.md  AUTONOMISATION_APPS_DAPP.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_QUICKSTART.md  CI_CD_SETUP.md  CI_CD_STATUS.md  CLAUDE.md  COMPLETION_SUMMARY.txt  CONFIGURATION_DEV_LOCAL.md  CONTRIBUTING.md  DAZNO_INTEGRATION_COMPLETE.md  DAZNO_TEAM_HANDOFF.md  DAZNO_WEBHOOK_QUICKSTART.md  DAZNO_WEBHOOK_SETUP.md  DEPLOIEMENT_PREPARE.md  DEPLOIEMENT_PRODUCTION_GUIDE.md  DEPLOIEMENT_PRODUCTION_SUCCESS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_README.md  DEPLOYMENT_READY_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_2025-10-14.md  DEPLOYMENT_STATUS_2025-10-18.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CHECKLIST.md  DEPLOY_NOW.sh  DEPLOY_NOW_GUIDE.md  DEPLOY_PRODUCTION_MAINTENANT.md  DEPLOY_READY.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  (+76 more)
.github/: README.md  (+1 more)
token4good-backend/: .dockerignore  .railwayignore  API_SECURITY_AUDIT.md  BUILD_SUCCESS.md  Cargo.toml  DATABASE_RESTORE.md  Dockerfile  MARKETPLACE_DATA_SUMMARY.md  MCP_API_ENDPOINTS.md  PRODUCTION_MIGRATION_GUIDE.md  README.md  README_SETUP.md  SECURITY_FIXES.md  build.rs  docker-compose.yml  railway-deploy.sh  railway.json  test-health.sh  token4good.schema.yaml
token4good-backend/examples/: test-mcp-endpoints.sh
token4good-backend/migrations/: 001_initial.sql  002_add_services_and_categories.sql  003_add_user_auth_fields.sql  004_add_t4g_tables.sql  005_production_complete_migration.sql  006_insert_marketplace_data.sql  007_mentoring_workflow.sql  008_mentoring_offers_bookings.sql  009_mentoring_proofs_and_escrow.sql  (+1 more)
(+894 files in other folders)
