[package]
name = "token4good-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http1"] }
tower = { version = "0.5" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
# RGB Protocol crates (v0.12 release candidate)
rgbcore = { version = "0.12.0-rc.2", package = "rgb-core" }
rgbstd = { version = "0.12.0-rc.2", package = "rgb-std", features = ["stl", "all"] }
bpcore = { version = "0.12.0-rc.2", package = "bp-core", features = ["stl"] }
amplify = "4.7"  # Required by RGB crates
strict_encoding = "2.7"  # Required for RGB data encoding
commit_verify = "0.12"  # For cryptographic commitments

# Lightning Network integration
tonic = "0.11"  # gRPC framework for LND
tonic-build = "0.11"  # Build support for proto files
prost = "0.12"  # Protocol Buffers implementation

jsonwebtoken = "8.3"  # Pour l'authentification JWT
bitcoin = "0.30"  # Bitcoin utilities
hex = "0.4"
sha2 = "0.10"
regex = "1.10"  # Pour la validation des inputs

# Database support - PostgreSQL (Supabase) et SQLite (tests)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json"] }
futures = "0.3"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4" 
